# imgui

./: CMakeLists.txt  README.md  build_clean.bat  build_release.bat  build_release.sh
include/: app.h  gui.h  imgui_app.h  log.h  plot.h
source/: app.cpp  gui.cpp  imgui_app.cpp  log.cpp  main.cpp  plot.cpp
